# homeassistant-mpris-bridge

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
hassbridge/: __init__.py  cli.py  hassinterface.py  mprismain.py  playerinterface.py
