[tool.poetry]
name = "homeassistant-mpris-bridge"
version = "0.0.2"
description = "Control your Home Assistant media players using MPRIS"
license = "GPL-3.0-or-later"
authors = ["Teemu R. <tpr@iki.fi>"]
repository = "https://github.com/rytilahti/homeassistant-mpris-bridge"
readme = "README.md"
packages = [
  { include = "hassbridge" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]


[tool.poetry.scripts]
hassbridge = "hassbridge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
asyncclick = ">=7"
websockets = ">=10.0"
dbus_next = ">=0.1.3"
anyio = "*"  # see https://github.com/python-trio/asyncclick/issues/18

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pre-commit = "*"
toml = "*"
tox = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "hassbridge"
known_third_party = ["asyncclick", "dbus_next"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
