[tool.poetry]
name = "homeassistant-mpris-bridge"
version = "0.0.2"
description = "Control your Home Assistant media players using MPRIS"
license = "GPL-3.0-or-later"
authors = ["Teemu R. <tpr@iki.fi>"]
repository = "https://github.com/rytilahti/homeassistant-mpris-bridge"
readme = "README.md"
packages = [
  { include = "hassbridge" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]


[tool.poetry.scripts]
hassbridge = "hassbridge.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
asyncclick = ">=7"
websockets = ">=10.0"
dbus_next = ">=0.1.3"
anyio = "*"  # see https://github.com/python-trio/asyncclick/issues/18

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pre-commit = "*"
toml = "*"
tox = "*"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "D",  # pydocstyle
  "F",  # pyflakes
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "FA", # flake8-future-annotations
  "I",  # isort
  "S",  # bandit
]
ignore = [
  "F821",  # undefined names for dbus types
  "F722",  # syntax error for multi-char dbus types
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "E501",  # line-to-longs due to spec c&p
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
